<resources>
    <string name="app_name">Tripongo</string>
    
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_register">Register</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_budget">Destination</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_interest">What do you like?</string>

    <string-array name="Destination">
        <item>Mumbai</item>
        <item>Delhi</item>
        <item>Goa</item>
    </string-array>

    <string-array name="Budget">
        <item>10-15k</item>
        <item>15-25k</item>
        <item>25-30k</item>
    </string-array>

    <string-array name="CurrentCity">
        <item>Mumbai</item>
        <item>Delhi</item>
        <item>Goa</item>
    </string-array>
    <string name="title_activity_fetch">Fetch</string>
    <string name="title_activity_listview">Your Plan ></string>
    <string name="title_content_main">Your Plan ></string>
    <string name="title_activity_webview">Your Map</string>
    <string name="title_activity_options">Options</string>

</resources>
