<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" tools:context=".LoginActivity"

    style="@style/AppTheme.NoActionBar"
    android:id="@+id/i">

    <!-- Login progress -->
    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/login_progress">

        <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </ScrollView>

    <Button android:id="@+id/email_sign_in_button" style="?android:textAppearanceSmall"
        android:layout_width="150dp" android:layout_height="wrap_content"
        android:text="@string/action_sign_in"
        android:textStyle="bold"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/email_register_button"
        android:background="@drawable/mybutton"/>

    <Button android:id="@+id/email_register_button" style="?android:textAppearanceSmall"
        android:layout_width="150dp" android:layout_height="wrap_content"
        android:text="@string/action_register"
        android:textStyle="bold"
        android:onClick="registerActivity"
        android:background="@drawable/mybutton"
        android:layout_below="@+id/email_sign_in_button"
        android:layout_alignStart="@+id/textView8"
        android:layout_marginTop="33dp" />

    <EditText android:id="@+id/password" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:hint="@string/prompt_password"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified" android:inputType="textPassword"
        android:maxLines="1" android:singleLine="true"
        android:layout_below="@+id/email"
        android:layout_alignParentStart="true"
        />

    <AutoCompleteTextView android:id="@+id/email" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:hint="@string/prompt_email"
        android:inputType="textEmailAddress" android:maxLines="1"
        android:singleLine="true"
        android:layout_marginTop="147dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Please Sign In or Register"
        android:id="@+id/textView8"
        android:layout_alignBottom="@+id/login_form"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tr"
        android:src="@drawable/tripongoblue"
        android:layout_toEndOf="@+id/login_progress"
        android:layout_alignTop="@+id/login_progress"
        android:layout_alignBottom="@+id/email" />

</RelativeLayout>
